[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/renderer/RendererControls.gd" type="Script" id=1]

[node name="RendererControls" type="VBoxContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -198.0
margin_top = -188.0
alignment = 2
script = ExtResource( 1 )

[node name="ControlGroup" type="VBoxContainer" parent="."]
visible = false
margin_right = 198.0
margin_bottom = 164.0

[node name="MinScale" type="HBoxContainer" parent="ControlGroup"]
margin_right = 198.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="ControlGroup/MinScale"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "min_scale"

[node name="SpinBox" type="SpinBox" parent="ControlGroup/MinScale"]
margin_left = 124.0
margin_right = 198.0
margin_bottom = 24.0

[node name="MaxScale" type="HBoxContainer" parent="ControlGroup"]
margin_top = 28.0
margin_right = 198.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="ControlGroup/MaxScale"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "max_scale"

[node name="SpinBox" type="SpinBox" parent="ControlGroup/MaxScale"]
margin_left = 124.0
margin_right = 198.0
margin_bottom = 24.0

[node name="AngleJitter" type="HBoxContainer" parent="ControlGroup"]
margin_top = 56.0
margin_right = 198.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="ControlGroup/AngleJitter"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "angle_jitter"

[node name="SpinBox" type="SpinBox" parent="ControlGroup/AngleJitter"]
margin_left = 124.0
margin_right = 198.0
margin_bottom = 24.0

[node name="MinDistorsion" type="HBoxContainer" parent="ControlGroup"]
margin_top = 84.0
margin_right = 198.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="ControlGroup/MinDistorsion"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "min_distorsion"

[node name="SpinBox" type="SpinBox" parent="ControlGroup/MinDistorsion"]
margin_left = 124.0
margin_right = 198.0
margin_bottom = 24.0

[node name="MaxDistorsion" type="HBoxContainer" parent="ControlGroup"]
margin_top = 112.0
margin_right = 198.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="ControlGroup/MaxDistorsion"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "max_distorsion"

[node name="SpinBox" type="SpinBox" parent="ControlGroup/MaxDistorsion"]
margin_left = 124.0
margin_right = 198.0
margin_bottom = 24.0

[node name="ShadowThreshold" type="HBoxContainer" parent="ControlGroup"]
margin_top = 140.0
margin_right = 198.0
margin_bottom = 164.0

[node name="Label" type="Label" parent="ControlGroup/ShadowThreshold"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "shadow_threshold"

[node name="SpinBox" type="SpinBox" parent="ControlGroup/ShadowThreshold"]
margin_left = 124.0
margin_right = 198.0
margin_bottom = 24.0

[node name="Button" type="Button" parent="."]
margin_top = 168.0
margin_right = 198.0
margin_bottom = 188.0
text = "Show Controls"
